# hidder

./: AudioFile.hpp  CMakeLists.txt  audiochooser.hpp  bottombar.hpp  button.hpp  filechooser.hpp  frame.hpp  main.cpp  menubar.hpp  openaudio.hpp  plaintext.hpp  preferences.hpp  process.hpp  saveaudio.hpp  seed.hpp  style.css  style.hpp  window.hpp
